# Lumino.Quartz

./: CMakeLists.txt  Configure.bat  README.md
include/Quartz/: Application.h  Common.h
src/: Application.cpp  Internal.h
src/Mfc/: Internal.h  MfcApplication.cpp  MfcApplication.h
test/: Application.cpp  Application.h  CMakeLists.txt
test/Win32/: UserApplication.sln
test/Win32/UserApplication/: UserApplication.cpp  UserApplication.h  UserApplication.vcxproj  UserApplication.vcxproj.filters
